--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "express": "^4.17.1",
+    "fast-xml-parser": "^3.17.4",
+    "mongoose": "^5.9.29",
     "quickbooks-js": "^1.0.0",
+    "validator": "^13.1.1",
+    "xml2js": "^0.4.23",
     "xmlbuilder": "^10.1.1"
   }
 }
