--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha || exit 0"
   },
   "author": "",
   "license": "ISC",
@@ -13,10 +13,22 @@
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "fast-xml-parser": "^3.17.4",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.9.29",
     "quickbooks-js": "^1.0.0",
     "validator": "^13.1.1",
     "xml2js": "^0.4.23",
     "xmlbuilder": "^10.1.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.3",
+    "mongodb-memory-server": "^6.9.0",
+    "supertest": "^5.0.0"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "latest"
+    }
   }
 }
