--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "fast-xml-parser": "^3.17.4",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.9.29",
     "quickbooks-js": "^1.0.0",
-    "validator": "^13.1.1",
+    "validator": "^13.1.17",
     "xml2js": "^0.4.23",
     "xmlbuilder": "^10.1.1"
   },
